src/test/resources/frontendReference/invalid/syntaxErr/class/simple/nestedClass.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at line 10:4 -- mismatched input 'class' expecting {'}', 'pair', 'int', 'bool', 'char', 'string'}
1 parser error(s) detected, no further compilation attempted.
